View Issue Details

IDProjectCategoryView StatusLast Update
0030547Open CASCADEOCCT:Foundation Classespublic2019-03-19 10:33
Reporterkgv Assigned Toapn  
PrioritynormalSeverityfeature 
Status closedResolutionfixed 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030547: Foundation Classes - NCollection_DoubleMap lacks Seek() method
DescriptionOther NCollection map classes provide interface for checking existence and fetching value within single query - via methods Seek() returning a pointer or overloaded methods Find() assigning found value passed as second argument.

NCollection_DoubleMap is inconsistent in this context - there are no similar methods.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Activities

git

2019-03-09 02:38

administrator   ~0082794

Branch CR30547 has been created by kgv.

SHA-1: 3cf71a4829ec60ef1c6a1578e0e0ede79018b9c5


Detailed log of new commits:

Author: kgv
Date: Sat Mar 9 02:32:11 2019 +0300

    0030547: Foundation Classes - NCollection_DoubleMap lacks Seek() method
    
    Added Seek1() and Seek2() methods to NCollection_DoubleMap class.

kgv

2019-03-09 04:43

developer   ~0082795

Patch is ready for review.

abv

2019-03-09 15:21

manager   ~0082804

The check for IsEmpty() in the beginning of the method Seek1() is redundant since this check is made in the initializer of the "for" cycle variable. Macro Standard_NoSuchObject_Raise_if at the beginning of methods Find1() and Find2() (those returning reference) is also redundant for the same reason.

git

2019-03-09 15:28

administrator   ~0082805

Branch CR30547 has been updated forcibly by kgv.

SHA-1: af75d4677f1312b7bad9b8896b092b45b5a43a3a

kgv

2019-03-09 15:28

developer   ~0082806

Corrected.

abv

2019-03-10 13:53

manager   ~0082810

No more remarks, please integrate. Test results are in Jenkins job CR30547-master-KGV

apn

2019-03-11 16:18

administrator   ~0082844

Combination -
OCCT branch : CR30547
master SHA - af75d4677f1312b7bad9b8896b092b45b5a43a3a
d67d4b811012eef8913d3c535c29654d0acf3c4c
Products branch : master SHA - 50f65bc5ba4d0133f24f5e5850620f39f60a9163
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 16561.69000000007 / 16562.049999999996 [-0.00%]
Products
Total CPU difference: 9087.790000000026 / 9082.700000000026 [+0.06%]
Windows-64-VC14:
OCCT
Total CPU difference: 18044.609375 / 17955.015625 [+0.50%]
Products
Total CPU difference: 10459.65625 / 10469.015625 [-0.09%]

Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2019-03-19 10:33

administrator   ~0083088

Branch CR30547 has been deleted by inv.

SHA-1: af75d4677f1312b7bad9b8896b092b45b5a43a3a

Related Changesets

occt: master af2fa459

2019-03-08 23:32:11

kgv


Committer: apn Details Diff
0030547: Foundation Classes - NCollection_DoubleMap lacks Seek() method

Added Seek1() and Seek2() methods to NCollection_DoubleMap class.
Affected Issues
0030547
mod - src/NCollection/NCollection_DoubleMap.hxx Diff File

Issue History

Date Modified Username Field Change
2019-03-08 21:39 kgv New Issue
2019-03-08 21:39 kgv Assigned To => abv
2019-03-09 02:38 git Note Added: 0082794
2019-03-09 04:43 kgv Note Added: 0082795
2019-03-09 04:43 kgv Assigned To abv => msv
2019-03-09 04:43 kgv Status new => resolved
2019-03-09 15:21 abv Note Added: 0082804
2019-03-09 15:28 git Note Added: 0082805
2019-03-09 15:28 kgv Note Added: 0082806
2019-03-09 19:50 kgv Assigned To msv => abv
2019-03-10 13:53 abv Note Added: 0082810
2019-03-10 13:53 abv Assigned To abv => bugmaster
2019-03-10 13:53 abv Status resolved => reviewed
2019-03-11 16:18 apn Test case number => Not needed
2019-03-11 16:18 apn Note Added: 0082844
2019-03-11 16:18 apn Status reviewed => tested
2019-03-17 15:40 apn Changeset attached => occt master af2fa459
2019-03-17 15:40 apn Assigned To bugmaster => apn
2019-03-17 15:40 apn Status tested => verified
2019-03-17 15:40 apn Resolution open => fixed
2019-03-19 10:33 git Note Added: 0083088