0030547: Foundation Classes - NCollection_DoubleMap lacks Seek() method

Added Seek1() and Seek2() methods to NCollection_DoubleMap class.